data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4311.wast
;; 10. **Repeated Function Index Call**:    Use `call_indirect` repeatedly with a valid function index but with dynamic condition checks (`br_if` and other conditions) in the table to ensure correct handling over multiple executions and conditional evaluations.      **Constraint**: Check consistent handling of dynamic lookups and conditional execution paths.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $check-dynamic-condition
      (param i32)
      (local i32)
      (i32.const 0)
      (local.set 1)
      (block
        (br_if 0
          (i32.eqz (local.get 1))
        )
        (call_indirect (type 0) (local.get 0)))
      (call_indirect (type 0) (local.get 0)))
  )
  "type mismatch"
)